manuscript updates/edits from TS SW

--- a/manuscript/01-introduction.Rmd
+++ b/manuscript/01-introduction.Rmd
@@ -1,9 +1,11 @@
 # Introduction
 
-  There is increased availability of multi-modality neuroimaging data on individual subjects, where each modality contains unique information about brain structure or function. Such data promises to allow us to explore not only patterns in individual modalities, but also how patterns in individual modalities relate to each other. In addition to these comparisons, multi-modal data allows us to observe the local covariance structure, or intermodal coupling (IMCo), between modalities. This local covariance structure can be interpreted as how modalities change with respect to one another at the voxel level in individual subjects.
+  There is increased availability of multi-modality neuroimaging data on individual subjects, with each modality containing unique information about brain structure or function. Such data allow us to explore patterns in individual modalities as well as patterns in interactions between modalities, or intermodal coupling (IMCo), on global, regional, or local scales [@uddinComplexRelationshipsStructural2013; @honeyPredictingHumanRestingstate2009; @guHeritabilityInterindividualVariability2021; @shokri-kojoriCorrespondenceCerebralGlucose2019; @ballerDevelopmentalCouplingCerebral2021; @vandekarSubjectlevelMeasurementLocal2016; @valcarcelDualModelingApproach2018; @valcarcelMIMoSAAutomatedMethod2018].
   
-  Previous studies have shown IMCo analysis is complementary to single-modality analysis and unveils otherwise undetectable findings. For example, in neurodevelopment, IMCo between cortical thickness and sulcal depth has suggested the cortical sheet is generally thinner in sulcal locations when compared to gyral locations, though this relationship was more spatially heterogeneous than previously described [@vandekar_subject-level_2016]. Additionally, this study showed the strength of coupling was lower in males compared to females and decreased with age. A separate study exploring IMCo between cerebral blood flow and amplitude of low frequency fluctuations (ALFF) showed that age-related declines in neurovascular coupling occurred most drastically during mid-adolescence and were enriched in the dorsal attention network [@baller_developmental_2021]. There were also differences in CBF-ALFF coupling between males and females; these differences were enriched in the frontoparietal network. In multiple sclerosis, IMCo has also shown use as a data augmentation tool to improve predictive accuracy of an automated lesion detection model over models using individual modality data alone [@valcarcelMIMoSAAutomatedMethod2018].
+  For example, on the global scale, structural connectivity (SC) and functional connectivity (FC) are strongly coupled in adults, but less straightforward in children. Additionally, bilateral FC can still be present in the abscence of major commisural fissures [@uddinComplexRelationshipsStructural2013]. In 2021, Gu et al. built on this global understanding of SC-FC coupling by exploring regional relationships -- they found SC-FC coupling to be strongest in visual and subcortical areas with high SC [@guHeritabilityInterindividualVariability2021]. In the study of energy utilization in the brain, Shokri-Kojori et al. showed that regional correspondence between cerebral glucose metabolism and fluctuations in blood oxygenation not only differed between brain networks in healthy patients but was also sensitive to differences between patients with acute or chronic alcohol use [@shokri-kojoriCorrespondenceCerebralGlucose2019].
   
-  In these prior studies, each voxel-wise coupling value was defined as the slope of the weighted regression lines for that local neighborhood between two modalities. However, since this method of calculating IMCo is based on regression slopes, it does not take into account voxel-level correlation and suffers from inherent asymmetry, where coupling values depend on the order in which modalities are listed. For example, depending on which modality is the reference modality, a coupling value, $m$, will change to its inverse, $1 / m$; this issue is especially problematic for coupling values with very small or very large magnitudes. Thus, this asymmetry necessitates arbitrary, yet influential, decision-making when it comes to analysis and inhibits straight-forward interpretation. Such a measure for IMCo is also limited to only two modalities, so study of coupling between more than two modalities would require analysis of all pairwise coupling maps. As the number of total modalities increase, this can quickly become overwhelming.
+  On the local scale, previous studies from our group on coupling between cortical thickness and sulcal depth has suggested the cortical sheet is generally thinner in sulcal locations than in gyral locations and that this relationship was more spatially heterogeneous than previously described [@vandekarSubjectlevelMeasurementLocal2016]. A separate study exploring IMCo between cerebral blood flow and resting-state fMRI signal amplitude showed that age-related declines in neurovascular coupling occurred most drastically during mid-adolescence and were enriched in the dorsal attention network [@ballerDevelopmentalCouplingCerebral2021]. There were also differences in CBF-ALFF coupling between males and females; these differences were enriched in the frontoparietal network.
   
-  Here, we propose a novel, PCA-based method of estimating IMCo which uses local covariance decomposition to define symmetric voxel-wise coupling values valid for two or more modalities that reduce the complex local covariance structures into a single value. Thus, our approach provides a more natural and interpretable way of describing coupling in settings with two modalities and allows for simplified study of overall local covariance structure in settings with more than two modalities. To demonstrate its sensitivity to biologically relevant patterns, we show PCA-based IMCo uncovers differences in three-modality coupling with respect to age and sex throughout neurodevelopment.
+  In these prior local IMCo studies, each voxel-wise coupling value was defined as the slope of the weighted linear regression (WLR) lines fit within a local neighborhood between two modalities. However, because this method of calculating IMCo is based on regression slopes, it does not take into account voxel-level correlation and also suffers from inherent asymmetry, where coupling values depend on which modalities is used as the independent variable in the WLR. Thus, this asymmetry necessitates arbitrary, yet influential, decision-making when it comes to analysis and limits straight-forward interpretation. Such a measure for IMCo is also limited to only two modalities, so the study of coupling between more than two modalities using existing methods would require analysis of all pairwise coupling. As the number of total modalities increases, this can become challenging to interpret. Additionally, analysis of all pairwise coupling may not address overall coupling.
+  
+  In response to these limitations, we propose a novel, principal component analysis (PCA) based method for estimating IMCo that uses local covariance decomposition to define symmetric voxel-wise coupling values valid for two or more modalities. This method reduces complex local covariance structures into a single value, thus providing a more natural and interpretable way of describing coupling in settings with two modalities. It also allows for simplified study of overall local covariance structure in settings with more than two modalities. To demonstrate its sensitivity to biologically relevant patterns, we show that PCA-based IMCo (pIMCo) uncovers differences in three-modality coupling with respect to age and sex in youth.
