--- a/manuscript/04-discussion.Rmd
+++ b/manuscript/04-discussion.Rmd
@@ -1,39 +1,32 @@
 # Discussion
-
-## PCA-based IMCo allows for the study of covariance structures at single voxel resolution
-  As growing emphasis is placed on the acquisition multi-modal data, new methodologies are necessary to enable these analyses. In 2016, Vandekar et al. introduced a method based on local regression slopes to study IMCo relationships at the single voxel level and showed it could reveal patterns between cortical thickness and sulcal depth that had been undiscovered by studies conducted on regions of interest or across the entire cortex [@vandekarSubjectlevelMeasurementLocal2016]. Since then, this method for studying local coupling has continued to enable discoveries [@ballerDevelopmentalCouplingCerebral2021]. However, despite its strengths, because this method relies on estimating regression slopes between modalities, it is inherently limited to the two-modality setting, cannot take correlation between modalities into account, and is asymmetric.
-
-  In this manuscript, we introduce a generalized approach to estimating IMCo that can be applied to two or more modalities, can be interpreted as a direct summary of local covariance matrices, and is symmetric. This method can be used with any combination of volumetric images to produce single-subject, voxel-resolution coupling images which can then be analyzed using standard techniques. We applied this method to show significant coupling between cerebral blood flow, resting state activations, and local connectivity throughout the brain. We then used voxel-level analyses to characterize how coupling varies in neurodevelopment.
+  As growing emphasis is placed on the acquisition of multi-modal data, new methodologies are necessary to enable these analyses. In 2016, Vandekar et al. introduced a method based on local WLR slopes to study IMCo relationships at the single voxel level and showed it could reveal patterns between cortical thickness and sulcal depth that had been undiscovered by studies conducted on regions of interest or across the entire cortex [@vandekarSubjectlevelMeasurementLocal2016]. Despite its strengths, because this method relies on estimating WLR slopes between modalities, it is inherently limited to the two-modality setting, cannot take correlation between modalities into account, and is asymmetric. These limitations are illustrated by the two-modality example in Figure \@ref(fig:wlrpca). We see that, if ALFF is regressed on to CBF, the WLR coupling value is 0.25, indicating little coupling, but if CBF is regressed on to ALFF, the WLR coupling value is 1.25, indicating much more coupling. These WLR coupling values describe the trend of the relationship between ALFF and CBF, but do not account for the statistical strength of that relationship.
+  
+  In this manuscript, we introduce pIMCo, generalized approach to estimating IMCo that can be applied to two or more modalities, can be interpreted as a direct summary of local covariance matrices, and is symmetric (Figure \@ref(fig:wlrpca)). Our method can be used with any combination of volumetric images to produce single-subject, voxel-resolution coupling images which can then be analyzed using standard techniques. We applied our proposed method to show significant coupling between cerebral blood flow, resting state activations, and local connectivity throughout the brain. We then used voxel-level analyses to characterize how coupling varies in neurodevelopment.
 
 ## Coupling of blood flow, resting state activation, and connectivity vary with age and sex
-  We found CBF-ALFF-ReHo coupling varied with age and sex in neurodevelopment in subcortical structures and cortical networks. In cortical networks, associations between coupling and age seemed to be highly enriched in the frontoparietal and default networks, which are networks well known to change through adolescence [TOCITE].
-  
+  We found that CBF-ALFF-ReHo coupling was spatially heterogeneous and varied with age and sex in neurodevelopment in both subcortical structures and cortical networks. These findings, which uncover otherwise undetectable intermodal interactions, are unique to those from individual modality analyses. We noticed that regions with high CBF-ALFF-ReHo coupling across subjects also tended to have high variance in coupling. This suggests these regions may be biologically interesting in the context of CBF-ALFF-ReHo coupling, since these regions may be home to pronounced differences in coupling phenotypes between subjects.
 
-  * Three modality coupling analysis reveals insights unique to those from individual modality analyses
+  Spin testing showed that the high proportion of coupling-age associations in the frontoparietal and default networks were enriched when compared to the cortex overall. This suggests that in neurodevelopment, there is change in not only vascular organization, resting state activation, and connectivity individually, but also in the strength of interaction between these features. These findings are consistent with and fortify the literature demonstrating the importance of frontoparietal and default networks as regions for change in neurodevelopment [@fairMaturingArchitectureBrain2008; @chaiEvolutionBrainNetwork2017; @linDevelopmentFrontoparietalConnectivity2019]. In subcortical structures, high proportions of coupling associations with age seen in the caudate, pallidum, hippocampus, and thalamus suggest that modulation of vascular, resting state activation, and connectivity coupling may be necessary in the development of movement, memory, and fundamental brain activities.
+  
+  High proportions of coupling associations with sex in the hippocampus and thalamus suggest that male-female differences in memory and fundamental brain activities between males and females could be explained in part by the strength of vascular organization, resting state activation, and connectivity coupling. The rarity of coupling-sex associations throughout the cortex suggests that this coupling may not play a role in explaining sex-based differences in higher-order processing. 
+  
+  Interestingly, despite low coupling-sex signal in the frontoparietal network, spin testing showed enrichment of coupling associations with sex in this network. Since spin testing is a spatial permutation test that uses the sex-coupling association thresholded p-value map to generate data under the null, this is likely due to a combination of overall rare such associations in the cortex and the particular spatial distribution of these associations within the frontoparietal network. This finding highlights potential shortcomings of using the spin test for enrichment analysis. Additionally, statistical analysis of enrichment in subcortical structures is not yet possible. More methods development is needed in this area.
 
 ## Limitations
-  PCA-based IMCo is designed to summarize a complex local covariance structure as one value to allow for easy analysis and data reduction. While this property is a main strength of the method, it leads to outputs that can be challenging to interpret, and these outputs cannot fully characterize the intricacies of coupling. This is especially true in settings with more than two modalities, as the covariance structure becomes even more complex and biological interpretation of coupling between many modalities can be non-intuitive.
+  pIMCo is designed to summarize a complex local covariance structure as one value for easy analysis, data reduction, and interpretation. This leads to outputs that cannot fully characterize the intricacies of coupling. This is especially true in settings with more than two modalities -- the covariance structure becomes even more complex, so more information is lost when it is summarized. However, in comparison to current analysis methods that do not take advantage of any information from complicated local covariance structures, pIMCo allows for these structures to be analyzed in an informative, yet manageable, way.
   
-  The symmetric nature of PCA-based IMCo is conducive to more consistent interpretation when compared to slope-based IMCo. However, while slope is an intuitive measure that can be interpreted as capturing the effect size of a relationship, the generalizable nature of our PCA-based coupling value makes it challenging to interpret biologically. Instead, it is most accurately interpreted in statistical terms - as a measure of the proportion of variance explained by the first eigenvector, or as a measure of how well the local covariance structure can be summarized by the first eigenvector. Here, we chose to interpret neighborhoods whose covariance structures could be well-summarized as ones that are strongly coupled.
+  The symmetric nature of pIMCo is conducive to more consistent interpretation when compared to slope-based IMCo. However, while slope is an intuitive measure that can be interpreted as capturing the effect size of a relationship, including its directionality, the generalizable nature of our pIMCo value makes it challenging to interpret biologically. Instead, it is most accurately interpreted in statistical terms -- as a measure of the proportion of variance explained by the first eigenvector, or as a measure of how well the local covariance structure could be summarized in one dimension. Visually, high values of coupling suggest data from those local neighborhoods look like long ellipsoids, while low values of coupling suggest those data look more like spheres (Figure \@ref(fig:wlrpca)).
   
-  This interpretation of PCA-based coupling highlights that in two-modality settings it cannot describe biological directionality of coupling - whether local increases in one modality lead, on average, to increases or decreases in the other modality. In more than two modalities, pairwise directionality is not described. Instead, it can only describe the strength of the coupling relationship. However, this can also be seen as an improvement over slope-based IMCo - with PCA-based IMCo, larger values uniformly correspond to stronger coupling, while with slope-based IMCo, more positive or more negative values both correspond to stronger coupling.
+## Future directions [TODO: Discuss future directions wrt pIMCo]
+  In this study, we applied pIMCo to study coupling between features derived from pcASL and rfMRI images. In the future, this method can be applied to any study in which interactions between multiple modalities are of interest. For example,[TODO] However, these correspondence analyses were performed regionally or globally -- voxel-wise IMCo analyses could reveal further insights.
   
-  Finally, though PCA-based coupling does not require specification of an arbitrary reference modality to calculate coupling values, it is still subject to other run-time choices, such as FWHM value or application of masks.
+  In the context of neurodegenerative disorders, it is well-known that Alzheimer's disease is characterized by changes in structural and functional MRI as well as in amyloid-tau positron emission tomography (PET) [@frisoniClinicalUseStructural2010; @rowleyAmyloidTauPET2020; @sperlingPotentialFunctionalMRI2011]. Numerous studies have been done to characterize Alzheimer's-related changes in these individual modalities as well as on interactions between these modalities [@bucknerMolecularStructuralFunctional2005; @hasaniSystematicReviewAssociation2021; @renApplicationStructuralFunctional2020; @walesEffectsAmyloidTau2021]. In this setting, pIMCo could provide voxel-level resolution in pairwise comparisons as well as in all three modalities together. This could be useful as a data reduction tool to simplify complex covariance structures for descriptive analyses as well as a data augmentation tool for predictive efforts.
   
-## Future directions
-
-  * Comments from John Detre: More importantly, although I can’t claim to completely understand the methods, I suspect there are numerous impactful applications.  For one thing, I have been skeptical of methods for partial volume correction of ASL CBF data because all of the correction methods are based on assumptions that may be incorrect and produce hypothetical CBF maps of voxels comprised of 100% gray matter that don’t actually exist. Examining structure-function relationships using uncorrected CBF and cortical thickness as inputs might be an alternative approach to PVC. Intermodal comparisons are also of high interest in neurodegenerative disorders that are studied intensively at Penn using multimodal MRI and PET scanning. In particular, relationships between structure, function, and amyloid or tau deposition using this approach could be worth pursuing in the context of the popular A-T-N (amyloid-tau-neurodegeneration) model for biological characterization of Alzheimer’s disease.
-
-  * Data augmentation for prediction
-  * Data reduction
-  * Extension to other spatial data (spatial RNA-seq?)
-
-
 # Conclusion
-  PCA-based IMCo offers a generalized approach for describing coupling between two modalities and a novel perspective for summarizing the overall covariance structure between more than two modalities. Here, we applied this method to the analysis of coupling between cerebral blood flow, resting state activations, and local connectivity maps. This analysis revealed patterns in neurodevelopment with respect to age and sex that were unique to those present in any individual modality. As multi-modal data becomes more common, we hope that PCA-based IMCo will serve as a tool for capturing complex intermodal relationships and allow for additional descriptive analyses, improved prediction efforts, and novel methodological advances, among others.
+  pIMCo offers a generalized approach for describing coupling between two modalities, as well as a novel perspective for summarizing the overall covariance structure between more than two modalities. Here, we applied this method to the analysis of coupling between cerebral blood flow, resting state activations, and local connectivity maps. This analysis revealed patterns in neurodevelopment with respect to age and sex that were unique to those present in any individual modality. As multi-modal data becomes more common, we hope that pIMCo will serve as a tool for capturing complex intermodal relationships and allow for additional descriptive analyses, improved prediction efforts, and novel methodological advances, among others.
   
 # Acknowledgements
+  This study was supported by grants from the National Institute of Mental Health (R01MH112847 to TDS and RTS; R01MH120482 and R01MH113550 to TDS; R01 MH123550-01 to RTS; R01MH107235 to RCG; 2T32MH019112-29A1 to EBB; R01MH120174, R01MH119185, and R56AG066656 to DRR). FH was supported by NIH Medical Scientist Training Program T32 GM07170. SMW was supported by the National Science Foundation Graduate Research Fellowship Program (NSF GRFP). The PNC data used was funded by NIMH RC2 grants (MH089983 and MH089924 to REG).
 
 # References
-
 <div id="refs"></div>
