--- a/manuscript/packages.bib
+++ b/manuscript/packages.bib
@@ -7,6 +7,26 @@
   url = {https://www.R-project.org/},
 }
 
+@ARTICLE{py06nimg,
+	author = {Paul A. Yushkevich and Joseph Piven and Cody Hazlett, Heather and
+	Gimpel Smith, Rachel and Sean Ho and James C. Gee and Guido Gerig},
+	title = {User-Guided {3D} Active Contour Segmentation of
+	Anatomical Structures: Significantly Improved Efficiency and Reliability},
+	journal = {Neuroimage},
+	year = {2006},
+	volume = {31},
+	number = {3},
+	pages = {1116--1128},
+}
+
+@Manual{stringr,
+    title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+    author = {Hadley Wickham},
+    year = {2019},
+    note = {R package version 1.4.0},
+    url = {https://CRAN.R-project.org/package=stringr},
+  }
+
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
@@ -41,45 +61,117 @@
   url = {https://bookdown.org/yihui/bookdown},
 }
 
-@Book{knitr2015,
-  title = {Dynamic Documents with {R} and knitr},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
+@Manual{pysurfer,
+	title = {PySurfer},
+	author = {Michael Waskom and Alexandre Gramfort and Scott Burns and Martin Luessi and Eric Larson},
+	year = {2020},
+	note = {PySurfer 0.11.0},
+	url = {https://pysurfer.github.io/index.html},
+}
+
+@Article{tidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
+  }
+
+@Manual{extrantsr,
+    title = {extrantsr: Extra Functions to Build on the 'ANTsR' Package},
+    author = {John Muschelli},
+    year = {2021},
+    note = {R package version 3.9.13.1},
+  }
+
+@Manual{antsr,
+    title = {ANTsR: ANTs in R: Quantification Tools for Biomedical Images},
+    author = {Brian B Avants},
+    year = {2020},
+    note = {R package version 0.5.7.5},
+  }
+
+@Manual{antsrcore,
+    title = {ANTsRCore: Core Software Infrastructure for 'ANTsR'},
+    author = {Benjamin M. Kandel and Philip A. Cook and Nicholas J. Tustison and John Muschelli},
+    year = {2020},
+    note = {R package version 0.7.4.9},
+  }
+
+@Manual{here,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
+    year = {2020},
+    note = {R package version 1.0.1},
+    url = {https://CRAN.R-project.org/package=here},
+  }
+
+@Article{fischl2012freesurfer,
+    title = {FreeSurfer},
+    author = {Bruce Fischl},
+    journal = {Neuroimage},
+    volume = {62},
+    number = {2},
+    pages = {774--781},
+    year = {2012},
+    publisher = {Elsevier},
+  }
+
+@Manual{fsformats,
+    title = {freesurferformats: Read and Write 'FreeSurfer' Neuroimaging File Formats},
+    author = {Tim Schäfer},
+    year = {2021},
+    note = {R package version 0.1.16},
+    url = {https://CRAN.R-project.org/package=freesurferformats},
+  }
+
+@Article{jenkinson2012fsl,
+  title = {FSL},
+  author = {Mark Jenkinson and Christian F Beckmann and Timothy EJ Behrens and Mark W Woolrich and Stephen M Smith},
+  journal = {Neuroimage},
+  volume = {62},
+  number = {2},
+  pages = {782--790},
+  year = {2012},
+  publisher = {Elsevier},
+}
+
+@Article{muschelli2015fslr,
+  title = {fslr: Connecting the FSL Software with R},
+  author = {John Muschelli and Elizabeth Sweeney and Martin Lindquist and Ciprian Crainiceanu},
+  journal = {The R Journal},
+  volume = {7},
+  number = {1},
+  pages = {163--175},
   year = {2015},
-  edition = {2nd},
-  note = {ISBN 978-1498716963},
-  url = {https://yihui.org/knitr/},
 }
 
-@InCollection{knitr2014,
-  booktitle = {Implementing Reproducible Computational Research},
-  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
-  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  year = {2014},
-  note = {ISBN 978-1466561595},
-  url = {http://www.crcpress.com/product/isbn/9781466561595},
-}
+@Manual{rlist,
+    title = {rlist: A Toolbox for Non-Tabular Data Manipulation},
+    author = {Kun Ren},
+    year = {2021},
+    note = {R package version 0.4.6.2},
+    url = {https://CRAN.R-project.org/package=rlist},
+  }
 
-@Book{rmarkdown2018,
-  title = {R Markdown: The Definitive Guide},
-  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2018},
-  note = {ISBN 9781138359338},
-  url = {https://bookdown.org/yihui/rmarkdown},
-}
+@Manual{neurobase,
+    title = {neurobase: 'Neuroconductor' Base Package with Helper Functions for 'nifti'
+Objects},
+    author = {John Muschelli},
+    year = {2021},
+    note = {R package version 1.32.1},
+  }
 
-@Book{rmarkdown2020,
-  title = {R Markdown Cookbook},
-  author = {Yihui Xie and Christophe Dervieux and Emily Riederer},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2020},
-  note = {ISBN 9780367563837},
-  url = {https://bookdown.org/yihui/rmarkdown-cookbook},
-}
-
+@Article{cox1996afni,
+    title = {AFNI: software for analysis and visualization of functional magnetic resonance neuroimages},
+    author = {Robert W Cox},
+    journal = {Computers and Biomedical research},
+    volume = {29},
+    number = {3},
+    pages = {162--173},
+    year = {1996},
+    publisher = {Elsevier},
+  }
