--- a/manuscript/05-supplement.Rmd
+++ b/manuscript/05-supplement.Rmd
@@ -1,1 +1,13 @@
-# (APPENDIX) Supplementary Materials {-}
+# Supplementary Materials
+
+```{r cbf, fig.cap = "A) Voxel-wise means across subjects of cortical CBF. B) Voxel-wise variances across subjects of cortical CBF. C) Thresholded maps of voxels with significant CBF associations with age after FDR correction at 0.05. D) Thresholded maps of voxels with significant CBF associations with sex after FDR correction at 0.05."}
+knitr::include_graphics("figures/cbf_all-01.png")
+```
+
+```{r alff, fig.cap = "A) Voxel-wise means across subjects of cortical ALFF. B) Voxel-wise variances across subjects of cortical ALFF. C) Thresholded maps of voxels with significant ALFF associations with age after FDR correction at 0.05. D) Thresholded maps of voxels with significant ALFF associations with sex after FDR correction at 0.05."}
+knitr::include_graphics("figures/alff_all-01.png")
+```
+
+```{r reho, fig.cap = "A) Voxel-wise means across subjects of cortical ReHo. B) Voxel-wise variances across subjects of cortical ReHo. C) Thresholded maps of voxels with significant ReHo associations with age after FDR correction at 0.05. D) Thresholded maps of voxels with significant ReHo associations with sex after FDR correction at 0.05."}
+knitr::include_graphics("figures/reho_all-01.png")
+```
